# modsim

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.example.toml
.github/workflows/: ci.yml
docs/: improvements.md
src/: main.rs
src/config/: mod.rs
src/sim/: mod.rs
src/transport/: rtu.rs  tcp.rs
