[package]
name = "modsim"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
evalexpr = "11.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.35", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-modbus = { version = "0.8", default-features = false, features = ["rtu", "rtu-server", "tcp", "tcp-server"] }
tokio-serial = "5.4"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
